// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`demo '👩‍👩‍👧‍👦' 1`] = `
UString {
  "0": "�",
  "1": "�",
  "10": "�",
  "2": "‍",
  "3": "�",
  "4": "�",
  "5": "‍",
  "6": "�",
  "7": "�",
  "8": "‍",
  "9": "�",
}
`;

exports[`demo '👩‍👩‍👧‍👦' 2`] = `11`;

exports[`demo '👩‍👩‍👧‍👦' 3`] = `1`;

exports[`demo '👩‍👩‍👧‍👦' 4`] = `1`;

exports[`demo '👩‍👩‍👧‍👦' 5`] = `
Array [
  "👩‍👩‍👧‍👦",
]
`;

exports[`demo mixin 1`] = `
"𠬠𠬠𠬠𠬠𠬠𠬠𠬠♥️𠬠典
♥️𠬠典そこで彼らは'\\"'👩‍👩‍👧‍👦'，オリーブ山と呼ばれる山からエルサレムに帰った。"
`;

exports[`demo mixin 2`] = `
Array [
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "�",
  "♥",
  "️",
  "�",
  "�",
  "典",
  "
",
  "♥",
  "️",
  "�",
  "�",
  "典",
  "そ",
  "こ",
  "で",
  "彼",
  "ら",
  "は",
  "'",
  "\\"",
  "'",
  "�",
  "�",
  "‍",
  "�",
  "�",
  "‍",
  "�",
  "�",
  "‍",
  "�",
  "�",
  "'",
  "，",
  "オ",
  "リ",
  "ー",
  "ブ",
  "山",
  "と",
  "呼",
  "ば",
  "れ",
  "る",
  "山",
  "か",
  "ら",
  "エ",
  "ル",
  "サ",
  "レ",
  "ム",
  "に",
  "帰",
  "っ",
  "た",
  "。",
]
`;

exports[`demo mixin 3`] = `
UString {
  "0": "�",
  "1": "�",
  "10": "�",
  "11": "�",
  "12": "�",
  "13": "�",
  "14": "♥",
  "15": "️",
  "16": "�",
  "17": "�",
  "18": "典",
  "19": "
",
  "2": "�",
  "20": "♥",
  "21": "️",
  "22": "�",
  "23": "�",
  "24": "典",
  "25": "そ",
  "26": "こ",
  "27": "で",
  "28": "彼",
  "29": "ら",
  "3": "�",
  "30": "は",
  "31": "'",
  "32": "\\"",
  "33": "'",
  "34": "�",
  "35": "�",
  "36": "‍",
  "37": "�",
  "38": "�",
  "39": "‍",
  "4": "�",
  "40": "�",
  "41": "�",
  "42": "‍",
  "43": "�",
  "44": "�",
  "45": "'",
  "46": "，",
  "47": "オ",
  "48": "リ",
  "49": "ー",
  "5": "�",
  "50": "ブ",
  "51": "山",
  "52": "と",
  "53": "呼",
  "54": "ば",
  "55": "れ",
  "56": "る",
  "57": "山",
  "58": "か",
  "59": "ら",
  "6": "�",
  "60": "エ",
  "61": "ル",
  "62": "サ",
  "63": "レ",
  "64": "ム",
  "65": "に",
  "66": "帰",
  "67": "っ",
  "68": "た",
  "69": "。",
  "7": "�",
  "8": "�",
  "9": "�",
}
`;

exports[`demo mixin 4`] = `70`;

exports[`demo mixin 5`] = `49`;

exports[`demo mixin 6`] = `49`;

exports[`demo mixin 7`] = `8`;

exports[`demo mixin 8`] = `false`;

exports[`demo mixin 9`] = `
Array [
  "𠬠",
  "𠬠",
  "𠬠",
  "𠬠",
  "𠬠",
  "𠬠",
  "𠬠",
  "♥️",
  "𠬠",
  "典",
  "
",
  "♥️",
  "𠬠",
  "典",
  "そ",
  "こ",
  "で",
  "彼",
  "ら",
  "は",
  "'",
  "\\"",
  "'",
  "👩‍👩‍👧‍👦",
  "'",
  "，",
  "オ",
  "リ",
  "ー",
  "ブ",
  "山",
  "と",
  "呼",
  "ば",
  "れ",
  "る",
  "山",
  "か",
  "ら",
  "エ",
  "ル",
  "サ",
  "レ",
  "ム",
  "に",
  "帰",
  "っ",
  "た",
  "。",
]
`;

exports[`demo 👩‍👩‍👧‍👦 1`] = `
UString {
  "0": "�",
  "1": "�",
  "10": "�",
  "2": "‍",
  "3": "�",
  "4": "�",
  "5": "‍",
  "6": "�",
  "7": "�",
  "8": "‍",
  "9": "�",
}
`;

exports[`demo 👩‍👩‍👧‍👦 2`] = `11`;

exports[`demo 👩‍👩‍👧‍👦 3`] = `1`;

exports[`demo 👩‍👩‍👧‍👦 4`] = `1`;

exports[`demo 👩‍👩‍👧‍👦 5`] = `
Array [
  "👩‍👩‍👧‍👦",
]
`;

exports[`simple '𠬠典' 1`] = `
Array [
  "�",
  "�",
  "典",
]
`;

exports[`simple '𠬠典' 2`] = `
Array [
  "𠬠",
  "典",
]
`;

exports[`simple '𠬠典' 3`] = `3`;

exports[`simple '𠬠典' 4`] = `2`;

exports[`simple '𠬠典' 5`] = `"典"`;

exports[`simple '𡬶寻尋' 1`] = `
Array [
  "�",
  "�",
  "寻",
  "尋",
]
`;

exports[`simple '𡬶寻尋' 2`] = `
Array [
  "𡬶",
  "寻",
  "尋",
]
`;

exports[`simple '𡬶寻尋' 3`] = `4`;

exports[`simple '𡬶寻尋' 4`] = `3`;

exports[`simple '𡬶寻尋' 5`] = `"寻"`;

exports[`support 1`] = `
Array [
  "constructor",
  "split",
  "substr",
  "substring",
  "indexOf",
  "includes",
  "slice",
  "charAt",
  "startsWith",
  "endsWith",
  "padEnd",
  "padStart",
  "codePointAt",
]
`;
